--- a/Style/Style1.css
+++ b/Style/Style1.css
@@ -202,7 +202,7 @@
 		  display: flex;
 		  flex-direction: column;
 		  width: 100%;
-		  height: 81vh; /* Высота всей области */
+		  height: 80%; /* Высота всей области */
 		  owerfloy-x: auto;
 		  margin-top: 6vh;
 		  margin-bottom: 6vh;
@@ -226,7 +226,7 @@
 		  position: relative;
 		  overflow-x: hidden; 
 		  width: 100%;
-		  height: 80vh; 
+		  height: 90%; 
 		  display: flex;
 		  align-items: center;
 		  margin-top: 9vh;
