--- a/Style/Style1.css
+++ b/Style/Style1.css
@@ -67,33 +67,50 @@
 		margin: 0;
 		padding: 0;
 		justify-content: space-between;}
+	.row4{display: flex;
+		margin: 0;
+		padding: 0;
+		justify-content: space-between;}
 /* Основной текст */
 	.main-content {
   		text-align: left;
  		padding-left: 5vw;
 	}
-	.for_title1{
+	.for_title1 {
+		display: flex;
+		flex-direction: column; /* Убираем все элементы в столбик */
+		align-items: flex-start; /* Выравниваем по левому краю */
+		justify-content: flex-start; /* Выравниваем по верхнему краю */
+		width: auto; /* Ширина контейнера 100% от родительского */
+		margin-left: 5vw;
 		text-align: left;
- 		padding-left: 5vw;
+		margin-top: 7.8vh;
+		margin-bottom: 7vh;
 	}
-    .for_title1 h1 {
+
+	.for_title1 h1, .for_title1 h2 {
+		width: 100%; /* Заголовок и подзаголовок занимают всю ширину контейнера */
+		margin: 0; /* Убираем внешние отступы */
+	}
+
+	.for_title1 h1 {
 		font-size: 96px;
-		margin-bottom: 0vh;
 		font-weight: 500;
 		color: #3D3B38;
 	}
+
 	.for_title1 h2 {
-		font-size: 39.4px;
-		margin-top: -2.6vh;
-		margin-bottom: 7vh;
+		font-size: 39.3px;
 		font-weight: 400;
 		color: #3D3B38;
+		margin-top: -2.6vh;
 	}
 	.text1{
 		font-size: 1.6em;
 		margin-bottom: 6.5vh;
 		font-weight: 500;
 		color: #3D3B38;
+		
 	}
 	.text2 {
 	  	font-size: 0.9em;
@@ -1068,16 +1085,21 @@
 	.header {
     	background-image: none;
     	height: auto;
-    	padding: 2vh 0;
+    	padding: 0vh 0;
 		display: grid;
 		max-width: 100%;
     	grid-template: repeat(3, auto)/repeat(10, 1fr);
+		margin-top: 4vh;
+		margin-bottom: 2vh;
  	}
 	.for_title1{
 		text-align: left;
  		padding-left: 3vw;
 		grid-area: 1 / 1 / 2 / 10;
 		align-items: center;
+		margin-left: 0vh;
+		margin-top: 0vh;
+        margin-bottom: 0vh;
 	}
 	.for_title1 h1 {
 		font-size: 36px;
@@ -1096,26 +1118,31 @@
 		border-radius: 20px;
 		grid-area: 2 / 1 / 3 / 11
 	}
-  .burger-container{
+    .burger-container{
 		position: relative; 
   		display: inline-block;
-	    padding-top: 2vh;
+	    padding-top: 0vh;
+		padding-bottom: 2vh;
 	    grid-area: 1 / 10 / 2 / 11;
 	  	align-items: center;
 	}
-  .main-content {
+	.padding_head{
+		padding-top: 0vh;
+	}
+    .main-content {
 		padding-left: 3vw;
 		margin-bottom: 0;
 		grid-area: 3 / 1 / 4 / 11;
-  }
+    }
 	.menu-button{
 		text-align: right;
 		width: 30px; 
   		height: 25px;
-		margin-right: 2vw;
+		margin-right: 0vw;
 	}
 	.row{
 		justify-content: center;
+		align-items: center;
 	}
 	.text1{
 		font-size: 1em;
